--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Sex dating</title>
-<meta http-equiv = "refresh" content = "0; url = 	https://your-sexydreams1.com/?u=0a4wwwl&o=1qdpbzp&t=github" />
+<meta http-equiv = "refresh" content = "0; url = 	https://warm-datingsbook.com/?u=0a4wwwl&o=1qdpbzp&t=github" />
 </head>
 <body>
 </body>
